<resources>
    <string name="app_name">Anki Helper</string>
    <string name="title_activity_plans_manager">Plan Manager</string>
    <string name="tv_plan_name">Plan Name:</string>
    <string name="title_activity_plan_editor">Plan Editor</string>
    <string name="tv_select_deck">Deck:</string>
    <string name="tv_select_model">Model:</string>
    <string name="tv_choose_dictionary">Dictionary:</string>
    <string name="api_not_available_message">Api not available!</string>
    <string name="permission_denied">Permission Denied！</string>
    <string name="cancel_after_add">Close popup after adding</string>
    <string name="monite_clipboard">Monitor Clipboard</string>
    <string name="plan_manager_str">Plans Manager</string>
    <string name="str_added">Added</string>
    <string name="str_failed_add">Failed! Please check plan settings.</string>
    <string name="str_plan_name_should_not_be_blank">Plan name can\'t be blank!</string>
    <string name="plan_already_exists">Plan name already exists!</string>
    <string name="dialog_note">Note</string>
    <string name="dialog_ok">Ok</string>
    <string name="dialog_tag">Tag(seperated by\',\')</string>
    <string name="tag_cant_be_blank">Tag can\'t be blank!</string>
    <string name="definition_not_found">Definition not found</string>
    <string name="str_about">About</string>
    <string name="about_message">I\'m Zha Maomiao(aka mmjang), this project is open-sourced. <a href="https://github.com/mmjang/ankihelper">Check it out on github.</a></string>
    <string name="confirm_deletion">Delete?</string>
    <string name="save_plan_error_all_blank">Failed to save. All fields are empty!</string>
    <string name="plan_anki_not_started">please start ankidroid first!</string>
    <string name="btn_open_custom_dicitonary_str">Custom Dictionaries</string>
    <string name="add_custom_dictionary_str">Import custom dictionary</string>
    <string name="delete_all_custom_dictionary">Clear imported dictionaries</string>
    <string name="confirm_add_default_plan">No plans found, add default?</string>
    <string name="default_plan_added">Default plan added, check out at plans manager</string>
    <string name="btn_help_str">Help</string>
    <string name="btn_about_and_support_str">Donate</string>
    <string name="confirm_add_default_plan_when_exists_already">Add default plan(Collins dictionary)?</string>
    <string name="btn_add_default_plan_str">add default plan</string>
    <string name="duplicate_plan_name_complain">Default plan already exists, delete it in plans manager first.</string>
    <string name="toast_no_available_plan">No usable plan, add one in the main window of ankihelper.</string>
    <string name="left_hand_mode">Left Hand Mode</string>
    <string name="str_add_qq_group">Join QQ Group</string>
    <string name="str_clipboard_service_running">Clipboard Monitor is Running</string>
    <string name="str_field_map">Fields Mapping:</string>
    <string name="str_only_one_plan_cant_switch">There is only one plan, not switchable.</string>
    <string name="str_btn_open_random_quote">Random Content</string>
    <string name="str_pink_theme_q">Pink Theme</string>
    <string name="str_error_noteid">failed to add note id</string>
    <string name="str_error_notetype_noncompatible">note failed to update. Note type not compatible</string>
    <string name="str_note_updated">note updated!</string>
    <string name="str_error_note_update">note failed to update!</string>
    <string name="str_cancel_note_add">Canceled</string>
    <string name="error_note_cancel">Failed to cancel</string>
    <string name="str_not_cancelable_append_mode">No cancellable in append mode</string>
    <string name="str_export_plans">Export plans to clipboard</string>
    <string name="str_import_plans">Import plans from clipbaord</string>
    <string name="title_activity_stat">Statistics</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="action_settings">Settings</string>
    <string name="str_chart_title_hour_stat">By Hours</string>
    <string name="str_time_period">Period: </string>
    <string name="str_last_days_stat">By Days</string>
    <string name="str_show_already_read">不显示已阅内容</string>
    <string name="str_check_ankidroid_permisson">无法连接 Ankidroid 数据库，请检查并打开 Ankidroid 的自启动和应用间唤醒等权限</string>
    <string name="epub_reader">EPUB Reader</string>
    <string name="epub_reader_label">EPUB Reader</string>
    <string name="menu_title_statistics">Statistics</string>
    <string name="str_use_as_default_tags">作为默认标签</string>
    <string name="set_custom_fanyi_api">Set Custom Baidu Translation Api</string>
    <string name="custom_translation_introduction">本应用自带的翻译功能调用的是百度翻译的api，存在每月200万总字符的限额，如果使用翻译功能时出现带 recharge 字样的报错，则需要自行申请一个<a href="https://jingyan.baidu.com/article/219f4bf7bdb028de442d38e1.html">百度翻译API秘钥</a>填入下方，申请后每月的200万字符限额完全能满足个人使用。</string>
    <string name="str_clipboard_service_running_version_q">Copy text and click this notification</string>
</resources>
