<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >
                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="4"
                    android:layout_height="wrap_content"
                    android:text="@string/tv_plan_name"
                    android:textSize="20sp"
                    />
                <EditText
                    android:layout_width="0dp"
                    android:layout_weight="6"
                    android:layout_height="wrap_content"
                    android:id="@+id/text_edit_plan_name"
                    android:inputType="text"
                    android:imeOptions="actionDone"
                    />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="4"
                    android:layout_height="wrap_content"
                    android:text="@string/tv_choose_dictionary"
                    android:textSize="20sp"
                    />
                <Spinner
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="6"
                    android:id="@+id/dictionary_spinner"
                    >
                </Spinner>
            </LinearLayout>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/text_view_dictionary_introduction"
                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >
                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="4"
                    android:layout_height="wrap_content"
                    android:text="@string/tv_select_deck"
                    android:textSize="20sp" />
                <Spinner
                    android:id="@+id/deck_spinner"
                    android:layout_width="0dp"
                    android:layout_weight="6"
                    android:layout_height="wrap_content"></Spinner>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >
                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="4"
                    android:layout_height="wrap_content"
                    android:text="@string/tv_select_model"
                    android:textSize="20sp" />

                <Spinner
                    android:id="@+id/model_spinner"
                    android:layout_width="0dp"
                    android:layout_weight="6"
                    android:layout_height="wrap_content"></Spinner>
            </LinearLayout>

            <View style="@style/Divider"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20dp"
                android:text="@string/str_field_map"
                />

            <android.support.v7.widget.RecyclerView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:id="@+id/recycler_view_fields_map"
                >
            </android.support.v7.widget.RecyclerView>
        </LinearLayout>
    </ScrollView>
