<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.stat.StatActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="8dp"
            android:visibility="gone"
            >
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/str_time_period"
                android:layout_weight="1"
                android:gravity="center"
                android:textSize="16sp"
                />
            <Spinner
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:id="@+id/spinner_last_days"
                android:entries="@array/last_days"
                >

            </Spinner>
        </LinearLayout>

        <android.support.design.chip.ChipGroup
            android:id="@+id/last_days_stat_chipgroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="8dp"
            app:singleSelection="true"
            app:layout_constraintTop_toBottomOf="@+id/textView2">

            <android.support.design.chip.Chip
                android:checked="true"
                android:id="@+id/chip_7"
                style="@style/Widget.MaterialComponents.Chip.Filter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="7 days" />

            <android.support.design.chip.Chip
                android:checked="false"
                android:id="@+id/chip_30"
                style="@style/Widget.MaterialComponents.Chip.Filter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="30 days" />

            <android.support.design.chip.Chip
                android:checked="false"
                android:id="@+id/chip_365"
                style="@style/Widget.MaterialComponents.Chip.Filter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="1 year" />
        </android.support.design.chip.ChipGroup>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/str_chart_title_hour_stat"
                android:textSize="14sp"
                android:gravity="center"
                android:layout_marginTop="8dp"
                />
            <com.github.mikephil.charting.charts.BarChart
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_margin="8dp"
                android:id="@+id/hourt_chart"/>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/str_last_days_stat"
                android:textSize="14sp"
                android:gravity="center"
                android:layout_marginTop="8dp"
                />
            <com.github.mikephil.charting.charts.LineChart
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_margin="8dp"
                android:id="@+id/last_days_chart"/>
        </android.support.v7.widget.CardView>
    </LinearLayout>

</ScrollView>